--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
   <!-- cordova.js required for cordova apps (remove if not needed) -->
+  <!-- <script src="js/ng-cordova.min.js"></script> -->
   <script src="cordova.js"></script>
 
   <!-- un-comment this code to enable service worker
