--- a/src/pages/gate/gate.html
+++ b/src/pages/gate/gate.html
@@ -32,40 +32,42 @@
 </ion-refresher> -->
   <div [ngSwitch]="category">
     <ion-list padding *ngSwitchCase="'weighed-orders'">
-      <div *ngFor="let  item of weighedOrders">
+      <div *ngFor="let  item of weighedOrders; let i = index">
         <ion-item>
-          <h2>{{ item.order_GROUP_NO }}</h2>
+          <h2>{{i+1}} - {{ item.order_NO }}</h2>
+          <h2>{{ item.product_NAME }}</h2>
+          <h2>{{ item.unit_TYPE }} Qty # {{displayIndianNumber(item.unit_TYPE)}}</h2>
           <h3>{{ item.customer_NAME }}</h3>
-          <h3>{{ item.product_NAME }}</h3>
-          <h3>Qty # {{displayIndianNumber(item.total_ORDER_UNIT)}}</h3>
-          <p>Total Cost # {{ displayINR(item.total_COST) }}</p>
-          <p>Uom # {{ item.uom_ID }} </p>
-          <p>Date {{item.order_DT}}</p>
-          <button ion-button block color="secondary" (click)="provideOutPass()">Out-Pass</button>
+          <h3>{{ item.site_NAME }}</h3>
+          <h3>{{ item.ordered_CREATED_BY }}</h3>
+          <button ion-button block color="secondary" (click)="updateSubOrder(item.order_NO,'TRANSIT','WEIGHED')">Grant Out-Pass</button>
         </ion-item>
       </div>
     </ion-list>
 
     <ion-list *ngSwitchCase="'transit'">
-      <button ion-item *ngFor="let transit_item of transitOrders" (click)="openNavDetailsPage(transit_item,'approve')" icon-start>
-        <h2>{{ transit_item.customer_NAME }}</h2>
-        <h3>{{ transit_item.product_NAME }}</h3>
-        <h3>Qty # {{displayIndianNumber(transit_item.total_ORDER_UNIT)}}</h3>
-        <p>Total Cost # {{ displayINR(transit_item.total_COST) }}</p>
-        <p>Order # {{ transit_item.order_GROUP_NO }} </p>
-        <p>Date {{transit_item.order_DT}}</p>
-      </button>
+      <div ion-item *ngFor="let transit_item of transitOrders; let i = index" icon-start>
+        <h2>{{i+1}} - {{ transit_item.order_NO }}</h2>
+        <h2>{{ transit_item.product_NAME }}</h2>
+        <h2>{{ transit_item.unit_TYPE }} Qty # {{displayIndianNumber(transit_item.unit_TYPE)}}</h2>
+        <h3>{{ transit_item.customer_NAME }}</h3>
+        <h3>{{ transit_item.site_NAME }}</h3>
+        <h3>{{ transit_item.ordered_CREATED_BY }}</h3>
+        <button ion-button block color="secondary" (click)="updateSubOrder(transit_item.order_NO,'DELIVERED','TRANSIT')">In-Pass</button>
+        <button ion-button block color="danger" (click)="updateSubOrder(transit_item.order_NO,'WEIGHED','TRANSIT')">Cancel Out-Pass</button>
+      </div>
     </ion-list>
 
-    <ion-list *ngSwitchCase="'Delivered'">
-      <button ion-item *ngFor="let delivered_item of deliveredOrders" (click)="openNavDetailsPage(delivered_item,'reject')" icon-start>
-        <h2>{{ delivered_item.customer_NAME }}</h2>
-        <h3>{{ delivered_item.product_NAME }}</h3>
-        <h3>Qty # {{displayIndianNumber(delivered_item.total_ORDER_UNIT)}}</h3>
-        <p>Total Cost # {{ displayINR(delivered_item.total_COST) }}</p>
-        <p>Order # {{ delivered_item.order_GROUP_NO }} </p>
-        <p>Date {{delivered_item.order_DT}}</p>
-      </button>
+    <ion-list *ngSwitchCase="'delivered'">
+      <div ion-item *ngFor="let delivered_item of deliveredOrders; let i = index" icon-start>
+        <h2>{{i+1}} - {{ delivered_item.order_NO }}</h2>
+        <h2>{{ delivered_item.product_NAME }}</h2>
+        <h2>{{ delivered_item.unit_TYPE }} Qty # {{displayIndianNumber(delivered_item.unit_TYPE)}}</h2>
+        <h3>{{ delivered_item.customer_NAME }}</h3>
+        <h3>{{ delivered_item.site_NAME }}</h3>
+        <h3>{{ delivered_item.ordered_CREATED_BY }}</h3>
+        <button ion-button block color="danger" (click)="updateSubOrder(delivered_item.order_NO,'TRANSIT','DELIVERED')">Cancel In-Pass</button>
+      </div>
     </ion-list>
   </div>
 </ion-content>
